--- a/templates/profile/edit.html
+++ b/templates/profile/edit.html
@@ -108,7 +108,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = 'http://localhost:5000/api';
+    const API_URL = '/api';
     const token = localStorage.getItem('token');
     const user = JSON.parse(localStorage.getItem('user') || 'null');
 
