--- a/templates/profile/view.html
+++ b/templates/profile/view.html
@@ -143,7 +143,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = 'http://localhost:5000/api';
+    const API_URL = '/api';
     const userId = window.location.pathname.split('/').pop();
     const currentUser = JSON.parse(localStorage.getItem('user') || 'null');
     const token = localStorage.getItem('token');
