--- a/templates/reviews/add.html
+++ b/templates/reviews/add.html
@@ -61,7 +61,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = 'http://localhost:5000/api';
+    const API_URL = '/api';
     const token = localStorage.getItem('token');
 
     // Get request_id from URL
