--- a/templates/skills/browse.html
+++ b/templates/skills/browse.html
@@ -38,7 +38,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = 'http://localhost:5000/api';
+    const API_URL = '/api';
     let allSkills = [];
 
     async function loadSkills() {
