--- a/templates/requests/list.html
+++ b/templates/requests/list.html
@@ -56,7 +56,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = '/api';
+    const API_URL = 'https://skillswap-v4rj.onrender.com/api';
     const token = localStorage.getItem('token');
     const user = JSON.parse(localStorage.getItem('user') || 'null');
 
