--- a/templates/chat/index.html
+++ b/templates/chat/index.html
@@ -67,7 +67,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = '/api';
+    const API_URL = 'https://skillswap-v4rj.onrender.com/api';
     const token = localStorage.getItem('token');
     const currentUser = JSON.parse(localStorage.getItem('user') || 'null');
     const DEFAULT_AVATAR = '/static/images/default-avatar.png';
