--- a/templates/profile/edit.html
+++ b/templates/profile/edit.html
@@ -108,7 +108,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = 'https://skillswap-v4rj.onrender.com/api';
+    const API_URL = 'https://skillswap-w5x1.onrender.com/api';
     const token = localStorage.getItem('token');
     const user = JSON.parse(localStorage.getItem('user') || 'null');
 
