--- a/templates/matching/matches.html
+++ b/templates/matching/matches.html
@@ -43,7 +43,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = 'https://skillswap-v4rj.onrender.com/api';
+    const API_URL = 'https://skillswap-w5x1.onrender.com/api';
 
     async function loadSkills() {
         try {
