--- a/templates/reviews/add.html
+++ b/templates/reviews/add.html
@@ -61,7 +61,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = 'https://skillswap-v4rj.onrender.com/api';
+    const API_URL = 'https://skillswap-w5x1.onrender.com/api';
     const token = localStorage.getItem('token');
 
     // Get request_id from URL
