--- a/templates/skills/browse.html
+++ b/templates/skills/browse.html
@@ -38,7 +38,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = 'https://skillswap-v4rj.onrender.com/api';
+    const API_URL = 'https://skillswap-w5x1.onrender.com/api';
     let allSkills = [];
 
     async function loadSkills() {
