--- a/templates/skills/search.html
+++ b/templates/skills/search.html
@@ -22,7 +22,7 @@
 
 {% block extra_scripts %}
 <script>
-    const API_URL = 'https://skillswap-v4rj.onrender.com/api';
+    const API_URL = 'https://skillswap-w5x1.onrender.com/api';
 
     async function loadTeachers() {
         const urlParams = new URLSearchParams(window.location.search);
